public enum VehicleType {
    Saab95,
    Volvo240,
    Ferry,
    VolkSwagenUnicorn,
    Scania
}
