@startuml
skinparam classAttributeIconSize 0
title Updated UML (Refactored 2.0)

' =========================
' INTERFACES
' =========================
interface HasPosition {
    +getX: double
    +getY: double
    +setPosition:
    +isNear: boolean
}

interface Movable  {
    +move():
    +turnLeft():
    +turnRight():
}

interface Transportable {
}

interface Loader<T> {
  +canLoad(item:T): boolean
  +canUnload(): boolean
  +load(item:T): void
  +unload(): T
}

interface Transporter<T extends Transportable> {
    +getCapacity : MAX_VALUE
    +getLoadCount : int
}

interface Turboable {
  +turboOn()
  +turboOff()
}

interface Rampable {
  +bedIsDown(): boolean
  +bedIsUp(): boolean
  +lowerBed()
  +raiseBed()
}

interface SimulationObserver{
    +onTick(items : List<RenderItem>)
}

' =========================
' MODEL CLASSES
' =========================
class App{
    +main
    +vehicles: List
    +workshops: List
}
'Creates new simulation, view, controller
'Should only know about factories and vehiclecomponent!!!


abstract class Vehicle  {
  - position : Position
  - engine : Engine
  - speedModel : SpeedModel
  - direction : Direction
  + getPosition() : Position
  + setPosition(p: Position)
  + getDirection() : Direction
  + setDirection(d: Direction)
  +startEngine()
  +stopEngine()
  +gas(amount)
  +brake(amount)
  +up()
  +down()
  +speedFactor():
}

enum Direction {
  NORTH
  SOUTH
  EAST
  WEST
}

abstract class Ferry {
}

abstract class Car {

}

abstract class VehicleTransporter<T extends Car> {
}

class Volvo240{
}
class Saab95 {
    + turboOn()
    + turboOff()
    + toggleTurbo()
    + speedFactor()
}
class Scania<T extends Transportable> {
    +lowerBed()
    +raiseBed()
}
class VolkswagenUnicorn {
}

class Workshop<T extends Car>  {
  -capacity:int
  -stored:List<T>
  -acceptedType:Class<T>
  +hasSpace() : boolean
  +getAcceptedType() : Class<T>


  }

class WallCollisionHandler {
    -minX : int
    -minY : int
    -maxX : int
    -maxY : int
    +handle(v : Vehicle)
    }

class WorkShopCollisionHandler {
    - distance : double
    + handle(vehicles : List<Vehicle>, shops : List<WorkShop<? extends Car>>) : List<Vehicle>
}

class Simulation {
  -vehicles: List<Vehicle>
  -observers : List<SimulationObserver>
  -wall: WallCollisionHandler
  -workshops: List<Workshop<? extends Car>>
  -workshopHandler: WorkshopCollisionHandler
  -mapper : RenderItemMapper

  +tick() : boolean
  +gasAll(amount)
  +brakeAll(amount)
  +startAll()
  +stopAll()
  +turnLeftAll()
  +turnRightAll()
  +upAll()
  +downAll()
  +turboOn()
  +turboOff()
  +toggleTurbo()
  +lowerBed()
  +raiseBed()
  +unloadCarFromShopRandom() : boolean

}
abstract class VehicleFactory{
    -registry: Map<VehicleType>, Supplier<Vehicle>
    + createVehicle(type: VehicleType): Vehicle
}



enum VehicleType{
    Volvo240
    Saab95
    Scania
    VolkswagenUnicorn
    Ferry
    }


' =========================
' VIEW
' =========================
class CarView {
  - initComponents(title) : void
}

class DrawPanel {
   -imageHandler : ImageHandler
    -items : List<RenderItem>
    +nTick(items : List<RenderItem>)
    +setRenderItems(items : List<RenderItem>
}


class ImageHandler{
   -images : Map<String, BufferedImage>
    +add(imageID : String, imagePath : String)
    +get(imageID : String) : BufferedImage
  }


' =========================
' CONTROLLER
' =========================
class CarController{
    -timer : Timer
    -simulation : Simulation
    -input : InputHandler
    -carView : CarView
    -factory : VehicleFactory

   +setView(view : CarView)
   }

class InputHandler{
    -controller : CarController
    +setupKeyBindings(component : JComponent)
    +bindButtons(view : CarView)
}

'===========================================
' GENERALISERING
'===========================================
'Är en subklass av
Vehicle <|-- Car
Car <|-- Volvo240
Car <|-- Saab95
Vehicle <|--VehicleTransporter
VehicleTransporter <|-- VolkswagenUnicorn
VehicleTransporter <|-- Ferry
Vehicle <|-- Scania
Vehicle --> Direction


JPanel <|-- DrawPanel
JFrame <|-- CarView




'===========================================
'REALISERING
'===========================================
'En klass implementerar ett interface
VehicleTransporter ..|> Transporter
WorkShop ..|> Loader
Workshop --|> HasPosition
Saab95 ..|> Turboable
Scania ..|> Rampable
VolkswagenUnicorn ..|> Rampable
Car ..|> Transportable
Vehicle ..|> Movable
Transporter ..|> Loader
Movable ..|> HasPosition

DrawPanel ..|> SimulationObserver

'===========================================
'KOMPOSITION
'===========================================
'En klass har fält som ansvarar av den
Simulation <-- SimulationObserver
CarController --> InputHandler
CarView <-- DrawPanel
CarView <-- JPanel
RenderItemMapper <-- RenderItem

'===========================================
'USAGE DEPENDANCY
'===========================================
' En klass använder eller skapar objekt av en annan klass/interface
Simulation ..> Turboable
Simulation ..> Rampable
Simulation ..> Car
Simulation ..> WorkShop
Simulation ..> WallCollisionHandler
Simulation ..> WorkShopCollisionHandler
CarController ..> Simulation
CarController ..> VehicleFactory
CarController ..> VehicleType
CarController ..> CarView
InputHandler ..> CarController
StandardVehicleFactory ..> Vehicle
WallCollisionHandler ..> Vehicle
WorkShopCollisionHandler ..> Vehicle
WorkShopCollisionHandler ..> WorkShop
DrawPanel ..> RenderItem
DrawPanel ..> ImageHandler
RenderItem ..> Vehicle


@enduml